Creando Navbar prueba TSX

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,14 @@ a {
     color-scheme: dark;
   }
 }
+
+/* addings */
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Work Sans', sans-serif;
+}
